--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "firxt",
+  "name": "firxt-1",
   "version": "1.0.0",
   "description": "",
   "main": "server.js",
@@ -9,7 +9,7 @@
     "server": "nodemon server.js",
     "client": "npm start --prefix client",
     "dev": "concurrently \"npm run server\" \"npm run client\"",
-    "render-postbuild": "npm install --prefix client && npm run build -- prefix client"
+    "render-postbuild": "NPM_CONFIG_PRODUCTION=false npm install --prefix client && npm run build -- prefix client"
   },
   "author": "",
   "license": "ISC",
