--- a/client/package.json
+++ b/client/package.json
@@ -1,5 +1,6 @@
 {
   "name": "firxt-f",
+  "homepage": "https://eustacedike.github.io/Firxt",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
