--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "client": "npm start --prefix client",
     "dev": "concurrently \"npm run server\" \"npm run client\"",
     "build": "NPM_CONFIG_PRODUCTION=false npm install --prefix client && cd client && npm run build",
-    "render-postbuild": "NPM_CONFIG_PRODUCTION=false npm install --prefix client && cd client && npm run build"
+    "render-postbuild": "NPM_CONFIG_PRODUCTION=false npm install --prefix client && npm run build"
   }
   },
   "author": "",
